background overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -72,5 +72,7 @@
 	}
 	body {
 		@apply bg-background text-foreground;
+		height: 100vh;
+		background-color: hsl(var(--primary));
 	}
 }
